--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore ./Go2Climb.API/Go2Climb.API
     - name: Test
-      run: dotnet test --no-build --verbosity normal ./Go2Climb.API/GoClimb.API.XUnit.test
+      run: dotnet test --no-build --verbosity normal ./Go2Climb.API/Go2Climb.API.Specflow.AcceptanceTests
