--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./Go2Climb.API/
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore ./Go2Climb.API/Go2Climb.API
     - name: Test
       run: dotnet test --no-build --verbosity normal ./Go2Climb.API/Go2Climb.API.Specflow.AcceptanceTests
