fix: change local database to deployed database

--- a/Go2Climb.API/Go2Climb.API/appsettings.json
+++ b/Go2Climb.API/Go2Climb.API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "ReplaceThisWithTheRealSecretWillBeUsedForTokens"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=go2climbISW;user=root;password=admin"
+    "DefaultConnection": "server=go2climbisw.mariadb.database.azure.com;database=go2climb;user=go2climb_admin@go2climbisw;password=$Outsiders"
   },
   "Logging": {
     "LogLevel": {
